[🙏 ]: not so sure about this assignment

--- a/Module3_Assignment.ipynb
+++ b/Module3_Assignment.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dde3909e",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "42ecdf89",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "de8db0af",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2983be8f",
    "metadata": {},
    "outputs": [],
@@ -195,13 +195,83 @@
     "        X = X.tocsc()[:, q.indices]\n",
     "        denom = X + (k1 * (1 - b + b * len_X / avdl))[:, None]\n",
     "        idf = self.vectorizer._tfidf.idf_[None, q.indices] - 1.\n",
-    "        numer = X.multiply(np.broadcast_to(idf, X.shape)) * (k1 + 1)                                                          \n",
+    "        numer = X.multiply(np.broadcast_to(idf, X.shape)) * (k1 + 1)\n",
+    "        \n",
     "        return (numer / denom).sum(1).A1"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "55a22f1f",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbbd601f",
+   "metadata": {},
+   "source": [
+    "# CLI Entry Part"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "782bd348",
+   "metadata": {},
+   "source": [
+    "## Client CLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e17a66e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What are you looking for : java aws azure docker python\n"
+     ]
+    }
+   ],
+   "source": [
+    "job_entry = input(\"What are you looking for : \").split(' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c8a691d",
+   "metadata": {},
+   "source": [
+    "## Simple Dictaionary Ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "29b4a2ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_top_five(key_word):\n",
+    "    result = dict()\n",
+    "    key_word_dict = key_word.to_dict()\n",
+    "    \n",
+    "    for item in key_word_dict:\n",
+    "        result[item] = key_word_dict[item][0]\n",
+    "        for index in key_word_dict[item] :\n",
+    "            result[item] += key_word_dict[item][index]\n",
+    "            \n",
+    "    return sorted(result.items(), key=lambda x: x[1], reverse=True)[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6b103a2",
    "metadata": {},
    "source": [
     "---"
@@ -219,6 +289,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b3454de",
+   "metadata": {},
+   "source": [
+    "## Information Retrival"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5ff56ff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<100x19135 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 38929 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_description = get_and_clean_data()\n",
+    "cleaned_description = cleaned_description.iloc[:100]\n",
+    "\n",
+    "vectorizer = CountVectorizer(preprocessor=preProcess, ngram_range=(1, 2))\n",
+    "vectorizer.fit_transform(cleaned_description)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "59b97889",
    "metadata": {},
    "source": [
@@ -227,12 +331,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "af9d073d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some cool python code goes here"
+    "def tf_ranking():\n",
+    "    X = vectorizer.transform(job_entry)\n",
+    "    \n",
+    "    # tf formula\n",
+    "    X.data = np.log10(X.data + 1)\n",
+    "    tf = pd.DataFrame(X.toarray(), columns=vectorizer.get_feature_names())\n",
+    "    \n",
+    "    print(show_top_five(tf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "60515368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('java', 0.6020599913279624), ('aw', 0.3010299956639812), ('azur', 0.3010299956639812), ('docker', 0.3010299956639812), ('python', 0.3010299956639812)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf_ranking()"
    ]
   },
   {
@@ -245,12 +374,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "409ba731",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Another cool python code goes here"
+    "def tf_idf_ranking(n):\n",
+    "    X = vectorizer.transform(job_entry)\n",
+    "    \n",
+    "    # tf-idf formula\n",
+    "    idf = n / (X.tocoo() > 0).sum(0)\n",
+    "    X.data = np.log10(X.data + 1)\n",
+    "    X.data = X.multiply(np.log10(idf))\n",
+    "    \n",
+    "    tfidf = pd.DataFrame(X.data.toarray(), columns=vectorizer.get_feature_names())\n",
+    "    \n",
+    "    print(show_top_five(tfidf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6071e81d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp/ipykernel_17216/2407125988.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  idf = n / (X.tocoo() > 0).sum(0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('java', 0.42082187474904936), ('aw', 0.21041093737452468), ('azur', 0.21041093737452468), ('docker', 0.21041093737452468), ('python', 0.21041093737452468)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf_idf_ranking(5)"
    ]
   },
   {
@@ -263,12 +428,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "369bc84a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# very super duper coolest python code goes here"
+    "from pprint import pprint\n",
+    "def BM25_ranking():\n",
+    "    bm25 = BM25()\n",
+    "    bm_ranking = bm25.fit(cleaned_description)\n",
+    "    bm_ranking = bm25.transform(' '.join(w for w in job_entry), cleaned_description)\n",
+    "    \n",
+    "    pprint(sorted(bm_ranking, reverse=True)[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b5cb1be2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.53906968182736,\n",
+      " 8.01630235443384,\n",
+      " 6.114675079756328,\n",
+      " 5.395575450169901,\n",
+      " 5.342448261012892]\n"
+     ]
+    }
+   ],
+   "source": [
+    "BM25_ranking()"
    ]
   },
   {
@@ -276,7 +469,7 @@
    "id": "f8b5c960",
    "metadata": {},
    "source": [
-    "## Some conclusion"
+    "## My Though about This assignment"
    ]
   },
   {
@@ -284,17 +477,67 @@
    "id": "3d42538e",
    "metadata": {},
    "source": [
-    "- Bra Bra Bra\n",
-    "- Bra Bra Bra\n",
-    "- Bra Bra?\n",
-    "- Bra Bra\n",
-    "- Bruh.."
+    "### The result from TF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02d5fbc9",
+   "metadata": {},
+   "source": [
+    "term frequency is a technique that retrive information by number of times that the word is occurs in that information \n",
+    "\n",
+    ",because of Java is occurs the most in the document that why java have the high place in the result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dbad66d",
+   "metadata": {},
+   "source": [
+    "### The result from TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1158c1af",
+   "metadata": {},
+   "source": [
+    "term frequency Inversion document frequency is use the weight and the weight is calculate from the word counting\n",
+    "\n",
+    "java seem happen to appear in the individual word without any term as prefix or postfix that why it also have the highest place while using the tf-idf technique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "787c03c5",
+   "metadata": {},
+   "source": [
+    "### The result from BM25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94e61276",
+   "metadata": {},
+   "source": [
+    "BM25 is a Best Match 25 it is a standard way using the probabilitstic IR model it using a bag of word to calculate and using the binomial distribution to do as a result\n",
+    "\n",
+    "because I cannot turn the np.ndarray to show in the pandas data frame I will assume that java will place to top place ( 8.xxx) because this word seem to seperate all over the .csv data set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a5654a2",
+   "metadata": {},
+   "source": [
+    "ended assignment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a604ea5c",
+   "id": "67135320",
    "metadata": {},
    "outputs": [],
    "source": []
